Fix dropdown.
On smaller viewports, the menu items get placed vertically. That's ok
but two problem appeared: the menu items were too close vertically
and the first menu item was a bit more to the left.

The first problem was because the padding on the a element (within the
main menu-item wrapper) has some padding but is inline instead of
inline-block. This is fixed.

The second problem was because all items except the first one had some
left margins. Now they have all some left margins, including the first
one.

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -231,8 +231,6 @@ hr {
 .u-bar__right {
   ul li {
     display: inline;
-  }
-  ul > * + * {
     margin-left: var(--space-s);
   }
 }
@@ -252,11 +250,13 @@ hr {
    The dropdown case accomodate more left padding for a small down
    arrow. */
 .menu-dropdown {
+  display: inline-block;
   padding: 12px var(--space-xs) 12px calc(var(--space-xs) + 12px);
   color: black;
   cursor: pointer;
 }
 .menu-link {
+  display: inline-block;
   padding: 12px var(--space-xs);
   color: black;
   cursor: pointer;
@@ -268,7 +268,7 @@ hr {
   content: ' ';
   position: absolute;
   left: 1.4rem;
-  top: 0.7rem;
+  top: 1.9rem;
   width: 0;
   height: 0;
   border-width: 1rem;
